--- a/style.css
+++ b/style.css
@@ -1,16 +1,15 @@
 body {
   font-family: "Open Sans", sans-serif;
-  text-align: end;
+  text-align: center;
   margin: 0;
 }
 
 #hero {
     width: 592px;
-    margin: 72px;
+    margin: 0 auto 72px;
 }
 
 img {
-    margin: 100px;
 }
 
 h1 {
@@ -43,14 +42,12 @@ p, #footer {
 .line {
     width: 568px;
     height: 0;
-
-    margin: 0 8px;
-
+    margin: 0 auto 8px;
     border: 1px solid #ECEFF2;
 }
 
 #balls {
     position: fixed;
-    top: 0;
+    bottom: 0;
     right: 0;
 }
